--- a/ClaseDeRepaso.style.css
+++ b/ClaseDeRepaso.style.css
@@ -1,5 +1,13 @@
+/* Estilo para el cuerpo de la pagina  */
+body {
+    background-color: rgb(164, 164, 201);
+    text-align: center;
+    padding: 15%;
+    
+}
 
 /*Estilo para el titulo principal*/
+
 h1 {
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(39, 39, 139);
@@ -13,6 +21,15 @@ h1 {
     text-align: center;
     font-size: 15px
 }
+/* Estilos en ambas imagenes*/
+img {
+    width: 80%;
+    max-width: 600px;
+    height: auto;
+    margin: 90px 0;
+    border: 5px solid #273457;
+    
+}
 
 p {
     font-family: Arial, Helvetica, sans-serif;
@@ -21,25 +38,16 @@ p {
 }
 /* Estilo para pregunta */
 .subt { 
-    
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(39, 39, 139);
+    color: rgb(237, 237, 243);
     font-size: 25px;
     list-style-type: none;
     padding: 0%;    
+    background-color: blue;
 }
-/* Estilos en ambas imagenes*/
-div {
-    display: flex;
-    justify-content: center;
-    margin: 5%;
-}
-/* se puede poner estilos directamente al body?  */
-body {
-    background-color: rgb(164, 164, 201);
-    text-align: justify;
-    padding: 15%;
-    
-}
+
+
+
+  
 
 
