--- a/ClaseDeRepaso.style.css
+++ b/ClaseDeRepaso.style.css
@@ -1,19 +1,18 @@
 /* Estilo para el cuerpo de la pagina  */
 body {
     background-color: rgb(164, 164, 201);
-    text-align: center;
-    padding: 15%;
+    margin-top: 0%;
+    padding-bottom: 1%; 
     
 }
 
 /*Estilo para el titulo principal*/
-
 h1 {
     font-family: Arial, Helvetica, sans-serif;
     color: rgb(39, 39, 139);
     font-size: 30px;
     text-align: center;
-    padding: 10px;
+    padding:auto ;
 }
  #autora {
     font-family: Arial, Helvetica, sans-serif;
@@ -22,14 +21,21 @@ h1 {
     font-size: 15px
 }
 /* Estilos en ambas imagenes*/
-img {
-    width: 80%;
-    max-width: 600px;
-    height: auto;
-    margin: 90px 0;
-    border: 5px solid #273457;
-    
+
+.image-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap; 
+    padding: 20px
 }
+
+img { 
+    width: 500%; 
+    max-width: 500px;
+    height: auto;
+    border: 5px solid #273457; 
+    margin: 100px; 
+ }
 
 p {
     font-family: Arial, Helvetica, sans-serif;
